--- a/index.html
+++ b/index.html
@@ -1,39 +1,73 @@
-Privacy Policy for Colors Magic
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy for Colors Switch</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy for Colors Switch</h1>
 
+        <p><strong>Effective Date:</strong> [Insert Date]</p>
 
-Colors Magic respects your privacy and is committed to protecting any information that may be collected when you use our Android game, Colors Magic, available on the Google Play Store.
+        <p>Colors Switch ("we", "us", "our") respects your privacy and is committed to protecting any information that may be collected when you use our Android game, Colors Switch, available on the Google Play Store.</p>
 
-Information We Do Not Collect
+        <h2>Information We Do Not Collect</h2>
 
-We do not collect any personal information or non-personal information from users of [Game Name]. This includes, but is not limited to:
+        <p>We do not collect any personal information or non-personal information from users of Colors Switch. This includes, but is not limited to:</p>
 
-No personal information such as name, email address, or contact details.
-No non-personal information such as device information, usage data, or IP addresses.
-Advertising
+        <ul>
+            <li>No personal information such as name, email address, or contact details.</li>
+            <li>No non-personal information such as device information, usage data, or IP addresses.</li>
+        </ul>
 
-Colors Magic may display advertisements served by third-party ad networks. These ad networks may collect certain information about your device and usage behavior through cookies, web beacons, and similar technologies to provide tailored advertisements to you. Please refer to the privacy policies of these third-party ad networks for more information on their practices and how to opt-out.
+        <h2>Advertising</h2>
 
-Disclosure of Information
+        <p>Colors Switch may display advertisements served by third-party ad networks. These ad networks may collect certain information about your device and usage behavior through cookies, web beacons, and similar technologies to provide tailored advertisements to you. Please refer to the privacy policies of these third-party ad networks for more information on their practices and how to opt-out.</p>
 
-Since we do not collect any information from users, we do not disclose any information to third parties except as required by law.
+        <h2>Disclosure of Information</h2>
 
-Data Security
+        <p>Since we do not collect any information from users, we do not disclose any information to third parties except as required by law.</p>
 
-Although we do not collect any data, we take reasonable measures to ensure that our app and any advertisements served within it are secure and free from unauthorized access or interference.
+        <h2>Data Security</h2>
 
-Your Choices
+        <p>Although we do not collect any data, we take reasonable measures to ensure that our app and any advertisements served within it are secure and free from unauthorized access or interference.</p>
 
-You may choose to disable personalized advertising through your device settings or by opting out through the ad networks.
-Children's Privacy
+        <h2>Your Choices</h2>
 
-Colors Magic is not directed to children under the age of 13, and we do not knowingly collect personal information from children.
+        <p>You may choose to disable personalized advertising through your device settings or by opting out through the ad networks.</p>
 
-Changes to This Privacy Policy
+        <h2>Children's Privacy</h2>
 
-We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy within the app.
+        <p>Colors Switch is not directed to children under the age of 13, and we do not knowingly collect personal information from children.</p>
 
-Contact Us
+        <h2>Changes to This Privacy Policy</h2>
 
-If you have any questions or concerns about this Privacy Policy, please contact us at emberloop.studio@gmail.com.
+        <p>We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy within the app.</p>
 
-By using Colors Magic, you agree to the terms of this Privacy Policy.
+        <h2>Contact Us</h2>
+
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us at <a href="mailto:emberloop.studio@gmail.com">emberloop.studio@gmail.com</a>.</p>
+
+        <p>By using Colors Switch, you agree to the terms of this Privacy Policy.</p>
+    </div>
+</body>
+</html>
