--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for Colors Switch</title>
+    <title>Privacy Policy for Colors Magic</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,13 +24,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy for Colors Switch</h1>
+        <h1>Privacy Policy for Colors Magic</h1>
 
-        <p>Colors Switch ("we", "us", "our") respects your privacy and is committed to protecting any information that may be collected when you use our Android game, Colors Switch, available on the Google Play Store.</p>
+        <p>Colors Magic ("we", "us", "our") respects your privacy and is committed to protecting any information that may be collected when you use our Android game, Colors Magic, available on the Google Play Store.</p>
 
         <h2>Information We Do Not Collect</h2>
 
-        <p>We do not collect any personal information or non-personal information from users of Colors Switch. This includes, but is not limited to:</p>
+        <p>We do not collect any personal information or non-personal information from users of Colors Magic. This includes, but is not limited to:</p>
 
         <ul>
             <li>No personal information such as name, email address, or contact details.</li>
@@ -39,7 +39,7 @@
 
         <h2>Advertising</h2>
 
-        <p>Colors Switch may display advertisements served by third-party ad networks. These ad networks may collect certain information about your device and usage behavior through cookies, web beacons, and similar technologies to provide tailored advertisements to you. Please refer to the privacy policies of these third-party ad networks for more information on their practices and how to opt-out.</p>
+        <p>Colors Magic may display advertisements served by third-party ad networks. These ad networks may collect certain information about your device and usage behavior through cookies, web beacons, and similar technologies to provide tailored advertisements to you. Please refer to the privacy policies of these third-party ad networks for more information on their practices and how to opt-out.</p>
 
         <h2>Disclosure of Information</h2>
 
@@ -55,7 +55,7 @@
 
         <h2>Children's Privacy</h2>
 
-        <p>Colors Switch is not directed to children under the age of 13, and we do not knowingly collect personal information from children.</p>
+        <p>Colors Magic is not directed to children under the age of 13, and we do not knowingly collect personal information from children.</p>
 
         <h2>Changes to This Privacy Policy</h2>
 
@@ -65,7 +65,7 @@
 
         <p>If you have any questions or concerns about this Privacy Policy, please contact us at <a href="mailto:emberloop.studio@gmail.com">emberloop.studio@gmail.com</a>.</p>
 
-        <p>By using Colors Switch, you agree to the terms of this Privacy Policy.</p>
+        <p>By using Colors Magic, you agree to the terms of this Privacy Policy.</p>
     </div>
 </body>
 </html>
